# sing

./: .dockerignore  .editorconfig  .eslintrc.cjs  .eslintrc.js  .gitignore  .prettierrc.cjs  Caddyfile  README.md  biome.json  bun.lockb  docker-compose.dev.yaml  docker-compose.dev.yml  docker-compose.yaml  package-lock.json  package.json  pnpm-lock.yaml  turbo.json
.github/workflows/: docker-build-api.yml  docker-build-app.yml  release-api.yml  release-docker.yml  release-electron.yml  release-tauri.yml  release-web.yml  tauri-build-game.yml
apps/api/: .env.example  .eslintrc.cjs  .eslintrc.js  .gitignore  Dockerfile  build.ts  drizzle.config.ts  package.json  rollup.config.ts  tsconfig.json
apps/api/drizzle/: 0000_harsh_mentor.sql  0000_silly_whirlwind.sql  0001_powerful_blue_blade.sql  0002_early_vargas.sql  0003_groovy_white_queen.sql  0004_abnormal_stepford_cuckoos.sql  0005_safe_sentry.sql  0006_quick_golden_guardian.sql  0007_certain_sabretooth.sql
apps/api/drizzle/meta/: 0000_snapshot.json  0001_snapshot.json  0002_snapshot.json  0003_snapshot.json  0004_snapshot.json  0005_snapshot.json  0006_snapshot.json  0007_snapshot.json  _journal.json
apps/api/prisma/: schema.prisma
apps/api/src/: base.ts  config.ts  constants.ts  cron.ts  index.ts  lucia.d.ts  server.ts  types.ts
apps/api/src/auth/: index.ts
apps/api/src/config/: env.ts
apps/api/src/db/: connection.ts  index.ts  schema.ts
apps/api/src/error/: index.ts
apps/api/src/fastify/: avatar.ts
apps/api/src/jwt/: jwt.ts
apps/api/src/lobby/: jwt.ts
apps/api/src/locales/: en.json  test.ts
apps/api/src/logto/: error.ts  jwks.ts  jwt.ts  management-api.ts  types.ts
apps/api/src/middleware/: auth.ts  combined-auth.ts  lobby-auth.ts  zod.ts
apps/api/src/middlewares/: auth.ts
apps/api/src/routes/: auth.ts  lobby.ts  users.ts
apps/api/src/services/: auth.ts  db.ts  email.ts  jwt.ts  (+3 more)
apps/app/: .env.example  Dockerfile  app.config.ts  index.html  package.json  tsconfig.json  uno.config.ts  vite.config.ts
apps/app/docker/: entrypoint.sh  nginx.conf
apps/app/src/: app.css  app.tsx  entry-server.tsx  index.tsx
apps/electron/: .env.example  .gitignore  README.md  electron-builder.yml  electron.vite.config.1674941033004.mjs  electron.vite.config.ts  package.json  tsconfig.node.json  tsconfig.web.json  unocss.config.ts
apps/game/: .env.example  app.config.ts  package.json  tsconfig.json  uno.config.ts  vite.config.ts
apps/game/src/: app.css  app.tsx  bindings.ts  entry-server.tsx  index.tsx  styles.scss  vite-env.d.ts
apps/game/src-tauri/: Cargo.toml  tauri.conf.json
apps/game/src-tauri/capabilities/: default.json
apps/game/src-tauri/src/: error.rs  lib.rs  main.rs
apps/game/src-tauri/src/audio/: mod.rs  processor.rs  recorder.rs
apps/game/src-tauri/src/commands/: meta.rs  microphones.rs  mod.rs  pitch.rs
apps/tauri/: .env.example  .eslintignore  .eslintrc.cjs  env.ts  index.html  package.json  pnpm-lock.yaml  tsconfig.json  uno.config.ts  unocss.config.ts  vite.config.ts
apps/tauri/locales/: en.json
apps/tauri/src/: App.vue  auto-imports.d.ts  components.d.ts  main.ts  router-guards.ts  rspc-bindings.ts  typed-router.d.ts  types.ts  vite-env.d.ts
apps/tauri/src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
apps/tauri/src-tauri/src/: main.rs  protocol.rs
apps/tauri/src-tauri/src/api/: metadata.rs  mod.rs
apps/tauri/src-tauri/src/api/audio/: devices.rs
apps/tauri/src-tauri/src/audio/: dywapitchtrack.rs  mod.rs  processor.rs  recorder.rs  utils.rs
apps/tauri/src-tauri/src/metadata/: mod.rs  replaygain.rs
apps/toolbox/: app.config.ts  biome.json  package.json  uno.config.ts  vite.config.ts
apps/toolbox/src/: App.tsx  bindings.ts  entry-client.tsx  entry-server.tsx  styles.scss
apps/toolbox/src-tauri/: Cargo.toml  tauri.conf.json
apps/toolbox/src-tauri/src/: commands.rs  error.rs  lib.rs  main.rs
apps/toolbox/src-tauri/src/convert/: lyrics.rs
apps/toolbox/src-tauri/src/download/: image.rs  mod.rs  youtube.rs
apps/toolbox/src-tauri/src/search/: image.rs  youtube.rs
apps/web/: .dockerignore  .env.example  .gitignore  Dockerfile  app.config.ts  app.vue  error.vue  next-auth.d.ts  nuxt.config.ts  package.json  types.ts  uno.config.ts  unocss.config.ts
apps/web/components/: Avatar.vue  Button.vue  LanguagePicker.vue  NavBar.vue
apps/web/composables/: useAuth.ts  useAuthProxyFn.ts  useErrorDisplay.ts  useNotification.ts  usePausableTimeoutFn.ts  useTRPC.ts
apps/web/layouts/: auth.vue  default.vue
apps/web/lib/: types.ts
apps/web/locales/: de-DE.json  en-US.json
apps/web/middleware/: auth.ts  lobby.global.ts  lobby.ts
apps/web/pages/: 404.vue  500.vue  index.vue
apps/web/plugins/: notification.ts  vue-query.ts
apps/web/src/: app.tsx  entry-client.tsx
(+401 files in other folders)
