[package]
name = "tauri"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri = { version = "1.4", features = [
  "fs-read-file",
  "fs-read-dir",
  "dialog-open",
  "window-set-fullscreen",
  "shell-open",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rspc = { version = "0.1.3", features = ["tauri"] }
tokio = { version = "1.29.1", features = ["rt"] }
rand = "0.8.5"
url = "2.4.0"
percent-encoding = "2.3.0"
lofty = "0.15.0"
tauri-plugin-persisted-scope = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
